# sandbox

./: .gitignore
.github/workflows/: getopts_test.yml  path_conversions_test.yml  xpl_test.yml
ampl-build-anomaly/: CMakeLists.txt  bar.c  foo.h  rebuild.sh
ampl/baseline_scripts/: README.md  basic_test.sh  build_dist.sh  build_manylinux.sh  build_ubuntu.sh  check_build.sh  download_tables.sh  escrow_decrypt.sh  gen_cov_rep.sh  prepare_baseline.sh  run_nl_tests.sh  run_output_tests.sh  run_tests.sh  tladjust.py  tlextend.sh
ampl/scripts/: amplkey.py  build_ax.sh  download_ampl.sh  escrow_update.sh
ampl/test_scripts/: bug.cases  functions.sh  one.case  run_output_tests.sh  script.case
ampl/win_build_scripts/: deficpp.sh  exicpp.sh  rebuild.sh
ampl_dir/test_scripts/: bug.cases  disappear.run  toy.cases
awk/: file.1  file.2  run_output_tests.sh
azure/: adjust_line_ending.sh  file.unix  file.win  functions.sh  prep_xpl_tests.sh  run_xpl_tests.sh
azure/artifacts/macos_cmake/: bug.cases.ampl-baseline.macos_cmake.macos.x64.time  bug.cases.ampl-ext.macos_cmake.macos.x64.time  bug.cases.ampl-tl.macos_cmake.macos.x64.time  bug.cases.ampl.macos_cmake.macos.x64.time
azure/artifacts/macos_make/: bug.cases.ampl-baseline.macos_make.macos.x64.time  bug.cases.ampl-tl.macos_make.macos.x64.time  bug.cases.ampl.macos_make.macos.x64.time  bug.cases.ax.macos_make.macos.x64.time
azure/artifacts/manylinux_cmake/: bug.cases.ampl-baseline.manylinux_cmake.linux.ia32.raw  bug.cases.ampl-baseline.manylinux_cmake.linux.ia32.time  bug.cases.ampl-baseline.manylinux_cmake.linux.x64.time  bug.cases.ampl-linux32-ext.manylinux_cmake.linux.ia32.time  bug.cases.ampl-linux32-tl.manylinux_cmake.linux.ia32.time  bug.cases.ampl-linux32.manylinux_cmake.linux.ia32.time  bug.cases.ampl-linux64-ext.manylinux_cmake.linux.x64.time  (+2 more)
bash/: array_slice.sh  text.file
bash/array_slice/: array_slice.sh  text.file
bash/file/: CMakeLists.txt  build.sh
bash/regex/: check_regex.sh
bash/winpath/: transform_to_win_path.sh
cmake/: CMakeLists.txt  bar.c  bar.h  foo.c  foo.h  main.c  rebuild.sh
getopts/: mygetopts.sh
grep/: gp.sh  print.c
path_conversion/: converting_paths.sh
port/: CMakeLists.txt  foo.c  foo.h  header.h  main.c  rebuild.sh
scripts/: az-release.sh  ccout.sh  licdecode.py  rb  speed_test.py  test.sh  test_fingerprint.py
sed/: file.1  run_sed_tests.sh
(+19 files in other folders)
